2007-08-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/xml-template.scm
	  Procedure xml-template->sxml now can take '() or #f as
	  replacing element and they are handled as empty node.

2007-08-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/mysql.scm
	  Switch default table type from MyISAM to InnoDB.

2007-08-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm, test/redirectcont.kahua
	          test/redirectcont.scm
	  Now redirect/cont specify status code like this:
	  (redirect/cont (cont entry arg1 arg2) (status 303))

	* Change: cgi/kahua.cgi.in
	  Drop "PATH", "SERVER_ADMIN", "SERVER_SIGNATURE", "DOCUMENT_ROOT",
	  "KAHUA_DEFAULT_SITE" from metavariables explicitly.

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          cgi/kahua.cgi.in
	  Use kahua.protocol.http/worker module and drop extra(dead) code.

2007-08-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, src/Makefile.in
	          cgi/kahua.cgi.in, cgi/fix-shebang.sh, cgi/Makefile.in
	  Add new procedures "kahua-cgilog-directory" and "kahua-cgilogpath".
	  So now kahua.fcg or kahua.cgi get log directory from kahua.conf.

2007-08-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-httpd.scm, src/kahua/server.scm
	  Content-type of .xml document, rss node and xml node
	  is now application/xml instead of text/xml.

2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Add interp-text for text/plain handling.
	  Fix interp-rss encoding.

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
	  Now cookie handling fit to RFC2965 more.

	* Change: src/kahua/config.scm.in
	  Configurable item "session-domain" added.  It can have :site,
	  :bridge, :worker or session range URI or path(string). Default
	  value is :site.

2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>
